--- a/plotly/search.html
+++ b/plotly/search.html
@@ -9,9 +9,14 @@
 <script type="text/javascript">
 function plotSearchWidget() {
 
-    var query = {
+    /*var query = {
         word: "Lincoln"
-    };
+    };*/
+    /*var parsedQuery = getJsonFromUrl(window.location.href);*/
+    var parsedQuery = getJsonFromUrl("https://analytics.hathitrust.org/blacklight/catalog?utf8=%E2%9C%93&q=Lincoln");
+    var query = new Object();
+    query.word = parsedQuery.q;
+    
     var timeSeriesOptions = {
         // Element to draw the chart in
         div: "bwSearchWidget",
