Pass timeSeriesOptions to getBWData
Pass timeSeriesOptions to getBWData so that it can display an error image on the area for the chart when there is an error.

--- a/plotly/search.html
+++ b/plotly/search.html
@@ -58,6 +58,7 @@ function plotSearchWidget() {
 
     getBWData("http://bookworm.htrc.illinois.edu/cgi-bin/dbbindings.py",
               searchOptions,
+              timeSeriesOptions,
               // This is the callback that runs when the data is ready
               function(data, error) { 
                 plotTimeSeries(data, timeSeriesOptions ) 
